--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://repo.codemc.org/repository/maven-public/' }
+    maven { url 'https://repo.dmulloy2.net/repository/public/' }
 }
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
     compileOnly 'org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT'
+    compileOnly 'com.comphenix.protocol:ProtocolLib:4.8.0'
     implementation 'org.javatuples:javatuples:1.2'
+    implementation 'de.tr7zw:item-nbt-api-plugin:2.11.2'
 }
 
 jar {
